--- a/apps/expo/eas.json
+++ b/apps/expo/eas.json
@@ -1,9 +1,25 @@
 {
-  "cli": { "version": ">= 3.1.1" },
-  "build": {
-    "development": { "developmentClient": true, "distribution": "internal" },
-    "preview": { "ios": { "simulator": true }, "distribution": "internal" },
-    "production": {}
+  "cli": {
+    "version": ">= 3.1.1"
   },
-  "submit": { "production": {} }
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "channel": "development"
+    },
+    "preview": {
+      "ios": {
+        "simulator": true
+      },
+      "distribution": "internal",
+      "channel": "preview"
+    },
+    "production": {
+      "channel": "production"
+    }
+  },
+  "submit": {
+    "production": {}
+  }
 }
