--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -20,6 +20,7 @@
     "@trpc/server": "^10.8.1",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
