--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean:workspaces": "turbo clean",
     "db:generate": "turbo db:generate",
     "db:push": "turbo db:push db:generate",
-    "dev": "turbo dev --parallel",
+    "dev:customers-wise": "turbo dev --scope=\"@profits-gg/customers-wise\"",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint",
     "FIXME:lint": "turbo lint && manypkg check",
