--- a/apps/customers-wise/package.json
+++ b/apps/customers-wise/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@profits-gg/ui": "*",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/font": "^13.0.1",
     "@prisma/client": "^4.7.1",
