--- a/apps/data-x/tsconfig.json
+++ b/apps/data-x/tsconfig.json
@@ -16,6 +16,13 @@
     "incremental": true,
     "noUncheckedIndexedAccess": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.cjs",
+    "**/*.mjs",
+    "next-env.d.ts"
+, "../../prettier.config.cjs"  ],
   "exclude": ["node_modules"]
 }
