--- a/apps/customers-wise/tsconfig.json
+++ b/apps/customers-wise/tsconfig.json
@@ -23,8 +23,8 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs",
-    "sentry.server.config.js",
-    "sentry.client.config.js",
+    "sentry.server.config.mjs",
+    "sentry.client.config.mjs",
     "src/env/server.mjs",
     "src/env/client.mjs",
     "src/env/schema.mjs"
