--- a/apps/data-x/package.json
+++ b/apps/data-x/package.json
@@ -4,23 +4,36 @@
   "private": true,
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
+    "db:generate": "prisma generate --schema prisma/schema.prisma ",
+    "db:push": "prisma db push --schema prisma/schema.prisma ",
+    "dev": "next dev -p 10001",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
+    "@next/font": "^13.1.6",
     "@prisma/client": "^4.9.0",
+    "@profits-gg/config": "*",
+    "@profits-gg/lib": "*",
+    "@profits-gg/ui": "*",
+    "@sentry/nextjs": "^7.36.0",
     "@tanstack/react-query": "^4.20.0",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "clsx": "^1.2.1",
     "next": "13.1.6",
     "next-auth": "^4.19.0",
+    "nodemailer": "^6.9.1",
+    "posthog-js": "^1.42.3",
+    "posthog-node": "^2.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-hot-toast": "^2.4.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
