--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "packages/*"
   ],
   "scripts": {
+    "dev:customers-wise": "turbo dev --scope=\"@profits-gg/customers-wise\"",
+    "db:customers-wise:generate": "turbo db:generate --scope=\"@profits-gg/customers-wise\"",
+    "db:customers-wise:push": "turbo db:generate db:push --scope=\"@profits-gg/customers-wise\"",
     "build": "turbo build",
     "clean": "rm -rf node_modules",
     "clean:workspaces": "turbo clean",
-    "db:generate": "turbo db:generate",
-    "db:push": "turbo db:push db:generate",
-    "dev:customers-wise": "turbo dev --scope=\"@profits-gg/customers-wise\"",
+    "dev:data-x": "turbo dev --scope=\"@profits-gg/data-x\"",
+    "db:data-x:generate": "turbo db:generate --scope=\"@profits-gg/data-x\"",
+    "db:data-x:push": "turbo db:generate db:push --scope=\"@profits-gg/data-x\"",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "lint": "turbo lint",
     "FIXME:lint": "turbo lint && manypkg check",
