--- a/apps/data-x/package.json
+++ b/apps/data-x/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.1",
     "posthog-js": "^1.42.3",
     "posthog-node": "^2.4.0",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.1",
