--- a/apps/data-x/tsconfig.json
+++ b/apps/data-x/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@data-x/*": ["./src/*"],
+      "@components/*": ["./src/components/*"]
+    },
     "target": "es2017",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -14,7 +19,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
+    "declaration": false,
+    "declarationMap": false,
+    "strictNullChecks": true,
+    "useUnknownInCatchVariables": true
   },
   "include": [
     "next-env.d.ts",
@@ -22,7 +31,8 @@
     "**/*.tsx",
     "**/*.cjs",
     "**/*.mjs",
-    "next-env.d.ts"
-, "../../prettier.config.cjs"  ],
+    "next-env.d.ts",
+    "../../prettier.config.cjs"
+  ],
   "exclude": ["node_modules"]
 }
