--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -8,6 +8,8 @@
     "prettier-preset.js"
   ],
   "dependencies": {
+    "eslint-config-turbo": "^0.0.7",
+    "eslint-plugin-prettier": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.2.2"
   }
 }
