update turbo return to globalEnv

--- a/turbo.json
+++ b/turbo.json
@@ -31,38 +31,37 @@
       "cache": false
     }
   },
-  "globalDependencies": [
+  "globalEnv": [
     "$NODE_ENV",
-    "$PORT",
-    "$VERCEL_URL",
-    "$SENTRY_DSN",
-    "$DATABASE_URL",
-    "$NEXTAUTH_SECRET",
-    "$NEXTAUTH_URL",
-    "$DATABASE_URL",
-    "$NEXTAUTH_SECRET",
-    "$NEXTAUTH_URL",
-    "$NEXT_PUBLIC_URL",
-    "$GOOGLE_CLIENT_ID",
-    "$GOOGLE_CLIENT_SECRET",
-    "$EMAIL_SERVER_HOST",
-    "$EMAIL_SERVER_PORT",
-    "$EMAIL_SERVER_USER",
-    "$EMAIL_SERVER_PASSWORD",
-    "$EMAIL_FROM",
-    "$NEXT_PUBLIC_POSTHOG_URL",
-    "$NEXT_PUBLIC_POSTHOG_API_KEY",
-    "$STRIPE_SECRET_KEY",
-    "$STRIPE_WEBHOOK_SECRET_KEY",
-    "$STRIPE_PUBLIC_KEY",
-    "$SENTRY_DSN",
-    "$TWITTER_API_KEY",
-    "$TWITTER_API_KEY_SECRET",
-    "$TWITTER_BEARER_TOKEN",
-    "$TWITTER_ACCESS_TOKEN",
-    "$TWITTER_ACCESS_TOKEN_SECRET",
-    "$TWITTER_CLIENT_ID",
-    "$TWITTER_CLIENT_SECRET"
-  ],
-  "globalEnv": []
+    "PORT",
+    "VERCEL_URL",
+    "SENTRY_DSN",
+    "DATABASE_URL",
+    "NEXTAUTH_SECRET",
+    "NEXTAUTH_URL",
+    "DATABASE_URL",
+    "NEXTAUTH_SECRET",
+    "NEXTAUTH_URL",
+    "NEXT_PUBLIC_URL",
+    "GOOGLE_CLIENT_ID",
+    "GOOGLE_CLIENT_SECRET",
+    "EMAIL_SERVER_HOST",
+    "EMAIL_SERVER_PORT",
+    "EMAIL_SERVER_USER",
+    "EMAIL_SERVER_PASSWORD",
+    "EMAIL_FROM",
+    "NEXT_PUBLIC_POSTHOG_URL",
+    "NEXT_PUBLIC_POSTHOG_API_KEY",
+    "STRIPE_SECRET_KEY",
+    "STRIPE_WEBHOOK_SECRET_KEY",
+    "STRIPE_PUBLIC_KEY",
+    "SENTRY_DSN",
+    "TWITTER_API_KEY",
+    "TWITTER_API_KEY_SECRET",
+    "TWITTER_BEARER_TOKEN",
+    "TWITTER_ACCESS_TOKEN",
+    "TWITTER_ACCESS_TOKEN_SECRET",
+    "TWITTER_CLIENT_ID",
+    "TWITTER_CLIENT_SECRET"
+  ]
 }
