--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_URL=http://localhost:3000
 
 # Next Auth Google Provider
+NEXT_PUBLIC_GOOGLE_API_KEY=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
