--- a/turbo.json
+++ b/turbo.json
@@ -43,6 +43,7 @@
     "NEXTAUTH_SECRET",
     "NEXTAUTH_URL",
     "NEXT_PUBLIC_URL",
+    "NEXT_PUBLIC_GOOGLE_API_KEY",
     "GOOGLE_CLIENT_ID",
     "GOOGLE_CLIENT_SECRET",
     "EMAIL_SERVER_HOST",
