--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "dev:customers-wise": "turbo dev --scope=\"@profits-gg/customers-wise\"",
     "db:customers-wise:generate": "turbo db:generate --scope=\"@profits-gg/customers-wise\"",
     "db:customers-wise:push": "turbo db:generate db:push --scope=\"@profits-gg/customers-wise\"",
+    "build:sard": "turbo run build --filter=sard",
+    "dev:sard": "turbo dev --scope=\"@profits-gg/sard\"",
+    "db:sard:generate": "turbo db:generate --scope=\"@profits-gg/sard\"",
+    "db:sard:push": "turbo db:generate db:push --scope=\"@profits-gg/sard\"",
     "clean": "rm -rf node_modules",
     "clean:workspaces": "turbo clean",
     "dev:data-x": "turbo dev --scope=\"@profits-gg/data-x\"",
