--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "db:generate": "prisma generate --schema prisma/schema.prisma ",
     "db:push": "prisma db push --schema prisma/schema.prisma ",
-    "dev": "next dev",
+    "dev": "next dev -p 10002",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
@@ -14,7 +14,10 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@profits-gg/lib": "*",
+    "@profits-gg/ui": "*",
     "@tanstack/react-query": "^4.28.0",
+    "@trpc-limiter/upstash": "^0.0.3",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
@@ -22,8 +25,10 @@
     "@vercel/analytics": "^1.0.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
   },
