remove unused  prettier plugin

--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^4.11.0",
     "@profits-gg/lib": "*",
     "@profits-gg/ui": "*",
+    "@profits-gg/config": "*",
     "@tanstack/react-query": "^4.28.0",
     "@trpc-limiter/upstash": "^0.0.3",
     "@trpc/client": "^10.18.0",
@@ -26,6 +27,7 @@
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "openai": "^3.2.1",
+    "prettier-plugin-tailwindcss": "^0.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
