--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@profits-gg/config": "*",
     "@profits-gg/lib": "*",
     "@profits-gg/ui": "*",
-    "@profits-gg/config": "*",
     "@tanstack/react-query": "^4.28.0",
     "@trpc-limiter/upstash": "^0.0.3",
     "@trpc/client": "^10.18.0",
@@ -24,6 +24,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "@vercel/analytics": "^1.0.0",
+    "eventsource-parser": "^1.0.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
     "openai": "^3.2.1",
