--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -23,6 +23,8 @@
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "@upstash/ratelimit": "^0.4.2",
+    "@upstash/redis": "^1.20.6",
     "@vercel/analytics": "^1.0.0",
     "eventsource-parser": "^1.0.0",
     "next": "^13.2.4",
