--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -29,6 +29,7 @@
     "eventsource-parser": "^1.0.0",
     "next": "^13.2.4",
     "next-auth": "^4.21.0",
+    "next-recaptcha-v3": "^1.1.5",
     "openai": "^3.2.1",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "react": "18.2.0",
