--- a/turbo.json
+++ b/turbo.json
@@ -63,6 +63,8 @@
     "TWITTER_ACCESS_TOKEN",
     "TWITTER_ACCESS_TOKEN_SECRET",
     "TWITTER_CLIENT_ID",
-    "TWITTER_CLIENT_SECRET"
+    "TWITTER_CLIENT_SECRET",
+    "$KV_REST_API_URL",
+    "$KV_REST_API_TOKEN"
   ]
 }
