--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.1",
     "request-ip": "^3.3.0",
     "superjson": "1.12.2",
     "zod": "^3.21.4"
