remove $ from env vars

--- a/turbo.json
+++ b/turbo.json
@@ -64,7 +64,7 @@
     "TWITTER_ACCESS_TOKEN_SECRET",
     "TWITTER_CLIENT_ID",
     "TWITTER_CLIENT_SECRET",
-    "$KV_REST_API_URL",
-    "$KV_REST_API_TOKEN"
+    "KV_REST_API_URL",
+    "KV_REST_API_TOKEN"
   ]
 }
