--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "db:generate": "prisma generate --schema prisma/schema.prisma ",
     "db:push": "prisma db push --schema prisma/schema.prisma ",
     "dev": "next dev -p 10002",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "build": "npm run db:push && next build"
   },
   "dependencies": {
     "@mdx-js/loader": "^2.3.0",
