add robost and sitemaps and update title and description

--- a/apps/sard/tsconfig.json
+++ b/apps/sard/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
     "target": "es2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "checkJs": true,
     "skipLibCheck": true,
@@ -18,7 +22,9 @@
     "noUncheckedIndexedAccess": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./src/*"]
+      "~/*": [
+        "./src/*"
+      ]
     },
     "declaration": false,
     "declarationMap": false,
@@ -27,15 +33,24 @@
     "composite": false,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "preserveWatchOutput": true
+    "preserveWatchOutput": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
   "ts-node": {
     "files": true,
-    "require": ["tsconfig-paths/register"],
+    "require": [
+      "tsconfig-paths/register"
+    ],
     "experimentalResolverFeatures": true,
     "compilerOptions": {
       "module": "CommonJS",
-      "types": ["node"]
+      "types": [
+        "node"
+      ]
     }
   },
   "include": [
@@ -50,7 +65,10 @@
     "../../packages/types/next-auth.d.ts",
     "../../prettier.config.cjs",
     "../types/next-auth.d.ts",
-    "../types/*.d.ts"
+    "../types/*.d.ts",
+    ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
