--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -30,9 +30,10 @@
     "@upstash/redis": "^1.20.6",
     "@vercel/analytics": "^1.0.0",
     "eventsource-parser": "^1.0.0",
-    "next": "^13.2.4",
+    "next": "^13.4.1",
     "next-auth": "^4.21.0",
     "next-recaptcha-v3": "^1.1.5",
+    "next-seo": "^6.0.0",
     "openai": "^3.2.1",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "react": "18.2.0",
