--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "db:generate": "prisma generate --schema prisma/schema.prisma ",
-    "db:push": "prisma db push --schema prisma/schema.prisma ",
+    "db:push": "prisma db push --schema prisma/schema.prisma --accept-data-loss",
     "dev": "next dev -p 10002",
     "postinstall": "prisma generate",
     "lint": "next lint",
@@ -12,6 +12,7 @@
     "build": "npm run db:push && next build"
   },
   "dependencies": {
+    "@hotjar/browser": "^1.0.7",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next-auth/prisma-adapter": "^1.0.5",
