--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -12,7 +12,6 @@
     "build": "npm run db:push && next build"
   },
   "dependencies": {
-    "@hotjar/browser": "^1.0.7",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next-auth/prisma-adapter": "^1.0.5",
@@ -30,19 +29,23 @@
     "@upstash/ratelimit": "^0.4.2",
     "@upstash/redis": "^1.20.6",
     "@vercel/analytics": "^1.0.0",
+    "clsx": "^1.2.1",
     "eventsource-parser": "^1.0.0",
     "next": "^13.4.1",
     "next-auth": "^4.21.0",
     "next-recaptcha-v3": "^1.1.5",
     "next-seo": "^6.0.0",
     "openai": "^3.2.1",
+    "posthog-js": "^1.63.2",
     "prettier-plugin-tailwindcss": "^0.2.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "request-ip": "^3.3.0",
+    "stripe": "^12.8.0",
     "superjson": "1.12.2",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
