--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "@types/eslint": "^8.21.3",
+    "@types/gtag.js": "^0.0.12",
     "@types/node": "^18.15.5",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
