--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -29,6 +29,7 @@
     "@upstash/ratelimit": "^0.4.2",
     "@upstash/redis": "^1.20.6",
     "@vercel/analytics": "^1.0.0",
+    "@vercel/edge": "^0.3.4",
     "clsx": "^1.2.1",
     "eventsource-parser": "^1.0.0",
     "next": "^13.4.1",
