update ui and story content

--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -21,6 +21,7 @@
     "@profits-gg/lib": "*",
     "@profits-gg/ui": "*",
     "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "@trpc-limiter/upstash": "^0.0.3",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
@@ -58,7 +59,6 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.56.0",
     "@typescript-eslint/parser": "^5.56.0",
-    "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.21",
