--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -33,6 +33,7 @@
     "@vercel/edge": "^0.3.4",
     "clsx": "^1.2.1",
     "compressorjs": "^1.2.1",
+    "cross-env": "^7.0.3",
     "eventsource-parser": "^1.0.0",
     "next": "^13.4.1",
     "next-auth": "^4.21.0",
