--- a/apps/data-x/tsconfig.json
+++ b/apps/data-x/tsconfig.json
@@ -48,5 +48,5 @@
     "../types/next-auth.d.ts",
     "../types/*.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", ".next"]
 }
