--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -18,5 +18,5 @@
   },
 
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["dist", "build", "node_modules"]
+  "exclude": ["dist", "build", "node_modules", ".next"]
 }
