--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -35,6 +35,7 @@
     "compressorjs": "^1.2.1",
     "cross-env": "^7.0.3",
     "eventsource-parser": "^1.0.0",
+    "html2pdf.js": "0.10.1",
     "next": "^13.4.1",
     "next-auth": "^4.21.0",
     "next-recaptcha-v3": "^1.1.5",
