--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -36,13 +36,14 @@
     "cross-env": "^7.0.3",
     "eventsource-parser": "^1.0.0",
     "html2pdf.js": "0.10.1",
-    "next": "^13.4.1",
+    "next": "^13.4.12",
+    "next-multilingual": "^5.0.14",
     "next-auth": "^4.21.0",
     "next-recaptcha-v3": "^1.1.5",
     "next-seo": "^6.1.0",
     "openai": "^3.2.1",
     "posthog-js": "^1.75.3",
-    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -65,11 +66,14 @@
     "eslint": "^8.36.0",
     "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.21",
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "prisma": "^4.11.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
+  },
+  "resolutions": {
+    "**/next": "^13.4.12"
   },
   "ct3aMetadata": {
     "initVersion": "7.12.0"
