--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "@typescript-eslint/parser": "^5.46.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.6.0",
-    "prettier": "^2.8.1",
-    "prettier-plugin-tailwindcss": "^0.2.1",
+    "prettier": "^3.0.2",
+    "prettier-plugin-tailwindcss": "^0.5.3",
     "turbo": "^1.6.3",
     "typescript": "^4.9.4"
+  },
+  "resolutions": {
+    "**/next": "^13.4.12"
   }
 }
