fix missing title and description

--- a/apps/sard/src/pages/activate-membership/index.ar-SA.properties
+++ b/apps/sard/src/pages/activate-membership/index.ar-SA.properties
@@ -1,4 +1,5 @@
 sard.activateMembership.title = تفعيل الإشتراك
+sard.activateMembership.description = يمكنك تفعيل الإشتراك بإستخدام البريد الإلكتروني أو رقم الجوال الذي تم استخدامه عند الإشتراك
 sard.activateMembership.slug = تفعيل الإشتراك
 sard.activateMembership.description = يمكنك تفعيل الإشتراك بإستخدام البريد الإلكتروني أو رقم الجوال الذي تم استخدامه عند الإشتراك
 sard.activateMembership.emailOrMobile = البريد الإلكتروني أو رقم الجوال
