--- a/apps/sard/src/pages/activate-membership/index.en-US.properties
+++ b/apps/sard/src/pages/activate-membership/index.en-US.properties
@@ -1,4 +1,5 @@
 sard.activateMembership.title = Activate Membership
+sard.activateMembership.description = You can activate your membership using the email or mobile number you used when subscribing
 sard.activateMembership.slug = Activate Membership
 sard.activateMembership.description = You can activate your membership using the email or mobile number you used when subscribing
 sard.activateMembership.emailOrMobile = Email or Mobile
