--- a/apps/sard/src/pages/checkout-success/index.ar-SA.properties
+++ b/apps/sard/src/pages/checkout-success/index.ar-SA.properties
@@ -1,4 +1,5 @@
 sard.checkoutSuccess.title = تم تفعيل الإشتراك بنجاح 🥳
+sard.checkoutSuccess.description = تم تفعيل الإشتراك بنجاح ويمكنك الأن انشاء قصص جديدة لا محدودة
 sard.checkoutSuccess.slug = تم الإشتراك بنجاح
 sard.checkoutSuccess.youSubscribedTo = أنت الأن مشترك في باقة
 sard.checkoutSuccess.endIn = تنتهي صلاحية الباقة في
