--- a/apps/sard/src/pages/checkout-success/index.en-US.properties
+++ b/apps/sard/src/pages/checkout-success/index.en-US.properties
@@ -1,4 +1,5 @@
 sard.checkoutSuccess.title = Your subscription has been activated successfully 🥳
+sard.checkoutSuccess.description = Your subscription has been activated successfully and you can now create unlimited new stories
 sard.checkoutSuccess.slug = checkout success
 sard.checkoutSuccess.youSubscribedTo = You are now subscribed to
 sard.checkoutSuccess.endIn = Subscription expires in
