--- a/apps/sard/src/pages/memberships/index.ar-SA.properties
+++ b/apps/sard/src/pages/memberships/index.ar-SA.properties
@@ -1,3 +1,5 @@
+sard.memberships.title = الإشتراكات
+sard.memberships.description = اشترك الآن واستمتع بقراءة عدد لا نهائي من القصص الجديدة
 sard.memberships.slug = الإشتراكات
 sard.memberships.ended = انتهت صلاحية باقتك
 sard.memberships.reachedMaxToday = وصلت الحد الأقصى للقصص الجديدة في اليوم تعال بكرة
