--- a/apps/sard/src/pages/memberships/index.en-US.properties
+++ b/apps/sard/src/pages/memberships/index.en-US.properties
@@ -1,3 +1,5 @@
+sard.memberships.title = Subscriptions
+sard.memberships.description = subscribe now and enjoy reading an unlimited number of new stories
 sard.memberships.slug = memberships
 sard.memberships.ended = your membership has ended
 sard.memberships.reachedMaxToday = you have reached the maximum number of new stories for today, come back tomorrow
