--- a/apps/sard/src/pages/blog/special-pages/index.ar-SA.properties
+++ b/apps/sard/src/pages/blog/special-pages/index.ar-SA.properties
@@ -1,4 +1,5 @@
 sard.special.title = الصفحات الخاصة
+sard.special.description = الصفحات الخاصة في موقع سرد
 sard.special.slug = الصفحات الخاصة
 sard.special.categories = مواضيع القصص في سرد
 sard.special.pdfKidsStories = قصص اطفال pdf
