--- a/apps/sard/src/pages/blog/special-pages/index.en-US.properties
+++ b/apps/sard/src/pages/blog/special-pages/index.en-US.properties
@@ -1,4 +1,5 @@
 sard.special.title = Special Pages
+sard.special.description = Special Pages in Sard
 sard.special.slug = special pages
 sard.special.categories = stories categories in sard
 sard.special.pdfKidsStories = kids stories in pdf
