--- a/apps/sard/src/pages/short-learning-stories-for-childrens/story/new-and-special-story-for-you-children/index.en-US.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/story/new-and-special-story-for-you-children/index.en-US.properties
@@ -1,6 +1,6 @@
-sard.childrenStoriesChooseCategory.title = New and special story for you children
+sard.childrenStoriesChooseCategory.title = New and special story for your children
 sard.childrenStoriesChooseCategory.description = Choose story main character name and category
-sard.childrenStoriesChooseCategory.slug = new and special story for you children
+sard.childrenStoriesChooseCategory.slug = new and special story for your children
 sard.childrenStoriesChooseCategory.chooseName = Choose story main character name
 sard.childrenStoriesChooseCategory.characterName = Story main character name
 sard.childrenStoriesChooseCategory.randomName = Random name
