fix new story page issue

--- a/apps/sard/src/pages/blog/special-pages/stories-categories/[category].ar-SA.properties
+++ b/apps/sard/src/pages/blog/special-pages/stories-categories/[category].ar-SA.properties
@@ -1,3 +1,4 @@
 sard.category.storyAbout = قصص عن
 sard.category.bestStoriesAbout = أفضل القصص عن
 sard.category.noStories = لا توجد قصص حاليا
+sard.category.newStory = أنشئ قصة جديدة
