--- a/apps/sard/src/pages/blog/special-pages/stories-categories/[category].en-US.properties
+++ b/apps/sard/src/pages/blog/special-pages/stories-categories/[category].en-US.properties
@@ -1,3 +1,4 @@
 sard.category.storyAbout = Stories about
 sard.category.bestStoriesAbout = Best stories about
 sard.category.noStories = No stories yet
+sard.category.newStory = Create a new story
