add new story button to story page

--- a/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].ar-SA.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].ar-SA.properties
@@ -4,3 +4,4 @@ sard.storySlug.downloadStoryAsPDF = تحميل القصة كـ PDF 📂
 sard.storySlug.storyEnded = انتهت القصة ⭐️
 sard.storySlug.relatedStories = قصص أخرى في نفس الموضوع
 sard.storySlug.noStories = لا توجد قصص حاليا
+sard.storySlug.newStory = أنشئ قصة جديدة خاصة بطفلك
