--- a/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].en-US.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].en-US.properties
@@ -4,3 +4,4 @@ sard.storySlug.downloadStoryAsPDF = Download Story as PDF 📂
 sard.storySlug.storyEnded = Story Ended ⭐️
 sard.storySlug.relatedStories = Related Stories
 sard.storySlug.noStories = No Stories Yet
+sard.storySlug.newStory = Create a new story specially for your child
