add page for children stories with large font query

--- a/apps/sard/src/pages/blog/special-pages/index.en-US.properties
+++ b/apps/sard/src/pages/blog/special-pages/index.en-US.properties
@@ -3,3 +3,4 @@ sard.special.description = Special Pages in Sard
 sard.special.slug = special pages
 sard.special.categories = stories categories in sard
 sard.special.pdfKidsStories = kids stories in pdf
+sard.special.storiesWithLargeFont = children stories written in large font
