--- a/apps/sard/src/pages/blog/special-pages/index.ar-SA.properties
+++ b/apps/sard/src/pages/blog/special-pages/index.ar-SA.properties
@@ -3,3 +3,4 @@ sard.special.description = الصفحات الخاصة في موقع سرد
 sard.special.slug = الصفحات الخاصة
 sard.special.categories = مواضيع القصص في سرد
 sard.special.pdfKidsStories = قصص اطفال pdf
+sard.special.storiesWithLargeFont = قصص اطفال مكتوبة بخط كبير
