--- a/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].ar-SA.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].ar-SA.properties
@@ -5,3 +5,5 @@ sard.storySlug.storyEnded = انتهت القصة ⭐️
 sard.storySlug.relatedStories = قصص أخرى في نفس الموضوع
 sard.storySlug.noStories = لا توجد قصص حاليا
 sard.storySlug.newStory = أنشئ قصة جديدة خاصة بطفلك
+sard.storySlug.increaseFont = زيادة حجم الخط
+sard.storySlug.decreaseFont = تصغير حجم الخط
