--- a/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].en-US.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].en-US.properties
@@ -5,3 +5,5 @@ sard.storySlug.storyEnded = Story Ended ⭐️
 sard.storySlug.relatedStories = Related Stories
 sard.storySlug.noStories = No Stories Yet
 sard.storySlug.newStory = Create a new story specially for your child
+sard.storySlug.increaseFont = Increase Font Size
+sard.storySlug.decreaseFont = Decrease Font Size
