return to stories page, better load more stories

--- a/apps/sard/src/pages/short-learning-stories-for-childrens/index.en-US.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/index.en-US.properties
@@ -1,3 +1,6 @@
 sard.childrenStories.title = Short learning stories for childrens
 sard.childrenStories.description = english children stories, new, educational, effective, valuable, beautiful, short, and dedicated to your child, for bedtime and education
 sard.childrenStories.slug = short learning stories for childrens
+sard.childrenStories.newStory = Create a new story specially for your child
+sard.childrenStories.loadMore = Load more stories
+sard.childrenStories.reachEnd = Reached the end of the stories
