--- a/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].ar-SA.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].ar-SA.properties
@@ -7,3 +7,4 @@ sard.storySlug.noStories = لا توجد قصص حاليا
 sard.storySlug.newStory = أنشئ قصة جديدة خاصة بطفلك
 sard.storySlug.increaseFont = زيادة حجم الخط
 sard.storySlug.decreaseFont = تصغير حجم الخط
+sard.storySlug.returnToStories = العودة للقصص
