--- a/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].en-US.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/story/[slug].en-US.properties
@@ -7,3 +7,4 @@ sard.storySlug.noStories = No Stories Yet
 sard.storySlug.newStory = Create a new story specially for your child
 sard.storySlug.increaseFont = Increase Font Size
 sard.storySlug.decreaseFont = Decrease Font Size
+sard.storySlug.returnToStories = Return to Stories
