--- a/apps/sard/src/pages/short-learning-stories-for-childrens/index.ar-SA.properties
+++ b/apps/sard/src/pages/short-learning-stories-for-childrens/index.ar-SA.properties
@@ -1,3 +1,6 @@
 sard.childrenStories.title = قصص اطفال تعليمية قصيرة
 sard.childrenStories.description = قصص اطفال عربية، جديدة، تعليمية، مؤثرة، قيمة، جميلة قصيرة، و مخصصة لطفلك، لقبل النوم وللتعليم
 sard.childrenStories.slug = قصص اطفال تعليمية قصيرة
+sard.childrenStories.newStory = أنشئ قصة جديدة خاصة بطفلك
+sard.childrenStories.loadMore = تحميل المزيد من القصص
+sard.childrenStories.reachEnd = وصلت الى نهاية القصص
