different stories categories and fix short category titles and descriptions

--- a/apps/sard/src/pages/blog/special-pages/stories-categories/[category].ar-SA.properties
+++ b/apps/sard/src/pages/blog/special-pages/stories-categories/[category].ar-SA.properties
@@ -1,4 +1,4 @@
-sard.category.storyAbout = قصص عن
-sard.category.bestStoriesAbout = أفضل القصص عن
+sard.category.storyAbout = قصص اطفال مصورة وقصيرة عن
+sard.category.bestStoriesAbout = أفضل قصص اطفال مصورة وقصيرة بخط كبير عن
 sard.category.noStories = لا توجد قصص حاليا
 sard.category.newStory = أنشئ قصة جديدة
