--- a/apps/sard/src/pages/blog/special-pages/stories-categories/[category].en-US.properties
+++ b/apps/sard/src/pages/blog/special-pages/stories-categories/[category].en-US.properties
@@ -1,4 +1,4 @@
-sard.category.storyAbout = Stories about
-sard.category.bestStoriesAbout = Best stories about
+sard.category.storyAbout = Children's short stories with pictures about
+sard.category.bestStoriesAbout = Best short stories for children with pictures and large font about
 sard.category.noStories = No stories yet
 sard.category.newStory = Create a new story
