--- a/apps/sard/src/components/Layout/index.ar-SA.properties
+++ b/apps/sard/src/components/Layout/index.ar-SA.properties
@@ -2,7 +2,12 @@ sard.Layout.logoText = سرد
 sard.Layout.newStory = قصة جديدة
 sard.Layout.mainPage = الصفحة الرئيسية
 sard.Layout.blog = المدونة
-sard.Layout.contactUs = تواصل معنا بـ
+sard.Layout.contactUs = تواصل معنا
 sard.Layout.email = الإيميل 
 sard.Layout.ar = سرد بالعربية
 sard.Layout.en = سرد بالإنجليزية
+sard.Layout.links = روابط
+sard.Layout.specialPages = صفحات خاصة
+sard.Layout.storiesCategories = مواضيع القصص
+sard.Layout.storiesInPdf = قصص اطفال بصيغة PDF
+sard.Layout.storiesInLargeFont = قصص اطفال بخط كبير
