--- a/apps/sard/src/components/Layout/index.en-US.properties
+++ b/apps/sard/src/components/Layout/index.en-US.properties
@@ -2,7 +2,12 @@ sard.Layout.logoText = Sard
 sard.Layout.newStory = New Story
 sard.Layout.mainPage = Main Page
 sard.Layout.blog = Blog
-sard.Layout.contactUs = Contact Us By
+sard.Layout.contactUs = Contact Us
 sard.Layout.email = Email
 sard.Layout.ar = Sard in Arabic
 sard.Layout.en = Sard in English
+sard.Layout.links = Links
+sard.Layout.specialPages = Special Pages
+sard.Layout.storiesCategories = Stories Categories
+sard.Layout.storiesInPdf = Stories for kids in PDF
+sard.Layout.storiesInLargeFont = Stories for kids in large font
