show stories instead of moving to main page in the large fonts and pdf pages

--- a/apps/sard/src/pages/blog/special-pages/stories-for-kids-in-pdf/index.ar-SA.properties
+++ b/apps/sard/src/pages/blog/special-pages/stories-for-kids-in-pdf/index.ar-SA.properties
@@ -2,4 +2,7 @@ sard.special.title = قصص و كتب اطفال pdf
 sard.special.slug = قصص و كتب اطفال pdf
 sard.special.description = مجموعة من قصص وكتب الأطفال التعليمة، القصيرة، المبسطة والمصورة، يمكن تحميلها كملفات PDF
 sard.special.mainPage = الذهاب لصفحة قصص وكتب اطفال تعليمية قصيرة
-
+sard.special.newStory = أنشئ قصة جديدة خاصة بطفلك
+sard.special.noStories = لا توجد قصص حاليا
+sard.special.loadMore = تحميل المزيد من القصص
+sard.special.reachEnd = وصلت الى نهاية القصص
