--- a/apps/sard/src/pages/blog/special-pages/stories-for-kids-in-pdf/index.en-US.properties
+++ b/apps/sard/src/pages/blog/special-pages/stories-for-kids-in-pdf/index.en-US.properties
@@ -2,5 +2,8 @@ sard.special.title = Stories for kids in pdf
 sard.special.slug = stories for kids in pdf
 sard.special.description = A collection of short, simplified and illustrated educational children's stories and books that can be downloaded as PDF files
 sard.special.mainPage = Go to short educational stories and books for children page
-
+sard.special.noStories = There are no stories yet
+sard.special.newStory = Create a new story specially for your child
+sard.special.loadMore = Load more stories
+sard.special.reachEnd = Reached the end of the stories
 
