--- a/apps/sard/src/pages/blog/special-pages/stories-written-in-large-font/index.ar-SA.properties
+++ b/apps/sard/src/pages/blog/special-pages/stories-written-in-large-font/index.ar-SA.properties
@@ -2,4 +2,8 @@ sard.largeFont.title = قصص اطفال مكتوبة بخط كبير
 sard.largeFont.slug = قصص اطفال مكتوبة بخط كبير
 sard.largeFont.description = قصص اطفال قصيرة تعليمية  pdf مكتوبة بخط كبير
 sard.largeFont.mainPage = الذهاب لصفحة القصص المكتوبة بخط كبير
+sard.largeFont.newStory = أنشئ قصة جديدة خاصة بطفلك
+sard.largeFont.noStories = لا توجد قصص حاليا
+sard.largeFont.loadMore = تحميل المزيد من القصص
+sard.largeFont.reachEnd = وصلت الى نهاية القصص
 
