--- a/apps/sard/src/pages/blog/special-pages/stories-written-in-large-font/index.en-US.properties
+++ b/apps/sard/src/pages/blog/special-pages/stories-written-in-large-font/index.en-US.properties
@@ -2,4 +2,7 @@ sard.largeFont.title = stories written in large font
 sard.largeFont.slug = stories written in large font
 sard.largeFont.description = learnging short stories for kids pdf written in large font
 sard.largeFont.mainPage = go to the main page of children stories written in large font
-
+sard.largeFont.noStories = There are no stories yet
+sard.largeFont.newStory = Create a new story specially for your child
+sard.largeFont.loadMore = Load more stories
+sard.largeFont.reachEnd = Reached the end of the stories
