--- a/apps/sard/package.json
+++ b/apps/sard/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "db:generate": "prisma generate --schema prisma/schema.prisma ",
+    "db:generate": "prisma generate --no-engine --schema prisma/schema.prisma ",
     "db:push": "prisma db push --schema prisma/schema.prisma --accept-data-loss",
     "dev": "next dev -p 10002",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate --no-engine",
     "lint": "next lint",
     "start": "next start",
     "build": "npm run db:push && next build",
@@ -17,7 +17,8 @@
     "@mdx-js/react": "^2.3.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@next/mdx": "^13.4.2",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^5.7.1",
+    "@prisma/extension-accelerate": "^0.6.2",
     "@profits-gg/config": "*",
     "@profits-gg/lib": "*",
     "@profits-gg/ui": "*",
@@ -32,6 +33,7 @@
     "@upstash/redis": "^1.20.6",
     "@vercel/analytics": "^1.0.0",
     "@vercel/edge": "^0.3.4",
+    "@vercel/speed-insights": "^1.0.2",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^1.2.1",
     "compressorjs": "^1.2.1",
@@ -71,7 +73,7 @@
     "postcss": "^8.4.21",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
-    "prisma": "^4.11.0",
+    "prisma": "^5.7.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
